# ptfuzzer

./: .gitignore  CMakeLists.txt  README.md  check_dep.sh  cmd  config-run.sh  delete_fup.py  disassemble.py  filter_fup.py  find_first_diff.py  install_pt.sh  pt.c  pt.h  ptfuzzer.py  requirements.txt  run_with_pt.py  simple.py  trim_log.py
afl-pt/: CMakeLists.txt  Makefile  afl-fuzz.c  afl-ptfuzz.c  afl-ptfuzz.cpp  disassemble.py  info.txt  pt.h
afl-pt/ptest/: readelf
afl-pt/qemu_mode/: build_qemu_support.sh
msr/: CMakeLists.txt  Makefile  cpuid.c  msr.h  rdmsr.c  version.h  wrmsr.c
msr-tools-master/: MAKEDEV-cpuid-msr  rdmsr.c  wrmsr.c
pt/: CMakeLists.txt  disassembler.c  disassembler.cpp  disassembler.h  khash.h  pt.c  pt.cpp  pt.h  pt_decoder.cpp  pt_decorder.cpp  pt_ext.h  run_pt.cpp  test_disassemble.cpp  test_pt.c  test_pt.cpp  tnt_cache.c  tnt_cache.cpp  tnt_cache.h  utils.h
testcase/: ptfuzzer.conf  run-readelf.sh
testcase/ptest/: readelf.text
